--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <input type="number" id="highway-km" placeholder="Км по трассе" min="0">
                 <button onclick="calculateFuel()">Рассчитать</button>
                 <p id="result"></p>
+                <p id="total-mileage"></p>
             </div>
         </div>
     </section>
