--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                         <option value="ru">RU</option>
                         <option value="en">EN</option>
                     </select>
-                    <button id="theme-toggle" aria-label="Переключить тему"><i class="fas fa-adjust"></i></button>
+                    <button id="theme-toggle" aria-label="Переключить тему">
+                        <span id="theme-text">Светлая</span>
+                    </button>
                 </div>
             </div>
         </div>
