--- a/index.html
+++ b/index.html
@@ -90,19 +90,21 @@
         <div class="container">
             <h2 id="screenshots-title">Скриншоты</h2>
             <div class="gallery" id="screenshot-gallery">
-                <img src="Screenshot-1-dark.jpg" alt="Скриншот 1" loading="lazy" data-light="Screenshot-1-light.jpg" onclick="openModal(this)">
-                <img src="Screenshot-2-dark.jpg" alt="Скриншот 2" loading="lazy" data-light="Screenshot-2-light.jpg" onclick="openModal(this)">
-                <img src="Screenshot-3-dark.jpg" alt="Скриншот 3" loading="lazy" data-light="Screenshot-3-light.jpg" onclick="openModal(this)">
-                <img src="Screenshot-4-dark.jpg" alt="Скриншот 4" loading="lazy" data-light="Screenshot-4-light.jpg" onclick="openModal(this)">
-                <img src="Screenshot-5-dark.jpg" alt="Скриншот 5" loading="lazy" data-light="Screenshot-5-light.jpg" onclick="openModal(this)">
-                <img src="Screenshot-6-dark.jpg" alt="Скриншот 6" loading="lazy" data-light="Screenshot-6-light.jpg" onclick="openModal(this)">
-                <img src="Screenshot-7-dark.jpg" alt="Скриншот 7" loading="lazy" data-light="Screenshot-7-light.jpg" onclick="openModal(this)">
-                <img src="Screenshot-8-dark.jpg" alt="Скриншот 8" loading="lazy" data-light="Screenshot-8-light.jpg" onclick="openModal(this)">
-                <img src="Screenshot-9-dark.jpg" alt="Скриншот 9" loading="lazy" data-light="Screenshot-9-light.jpg" onclick="openModal(this)">
-                <img src="Screenshot-10-dark.jpg" alt="Скриншот 10" loading="lazy" onclick="openModal(this)">
-                <img src="Screenshot-11-dark.jpg" alt="Скриншот 11" loading="lazy" onclick="openModal(this)">
-                <img src="Screenshot-12-dark.jpg" alt="Скриншот 12" loading="lazy" onclick="openModal(this)">
+                <img src="Screenshot-1-dark.jpg" alt="Скриншот 1" loading="lazy" data-light="Screenshot-1-light.jpg" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-2-dark.jpg" alt="Скриншот 2" loading="lazy" data-light="Screenshot-2-light.jpg" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-3-dark.jpg" alt="Скриншот 3" loading="lazy" data-light="Screenshot-3-light.jpg" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-4-dark.jpg" alt="Скриншот 4" loading="lazy" data-light="Screenshot-4-light.jpg" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-5-dark.jpg" alt="Скриншот 5" loading="lazy" data-light="Screenshot-5-light.jpg" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-6-dark.jpg" alt="Скриншот 6" loading="lazy" data-light="Screenshot-6-light.jpg" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-7-dark.jpg" alt="Скриншот 7" loading="lazy" data-light="Screenshot-7-light.jpg" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-8-dark.jpg" alt="Скриншот 8" loading="lazy" data-light="Screenshot-8-light.jpg" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-9-dark.jpg" alt="Скриншот 9" loading="lazy" data-light="Screenshot-9-light.jpg" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-10-dark.jpg" alt="Скриншот 10" loading="lazy" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-11-dark.jpg" alt="Скриншот 11" loading="lazy" onclick="openModal(this)" ondblclick="openModal(this)">
+                <img src="Screenshot-12-dark.jpg" alt="Скриншот 12" loading="lazy" onclick="openModal(this)" ondblclick="openModal(this)">
             </div>
+            <button class="slider-prev" onclick="scrollGallery('prev')"><i class="fas fa-chevron-left"></i></button>
+            <button class="slider-next" onclick="scrollGallery('next')"><i class="fas fa-chevron-right"></i></button>
         </div>
     </section>
 
