--- a/index.html
+++ b/index.html
@@ -1,151 +1,42 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="FuelMaster — приложение для управления расходом топлива, отслеживания автомобилей и получения советов. Скачайте для Android и iOS!">
-    <meta name="keywords" content="FuelMaster, расход топлива, калькулятор, автомобили, Flutter, Android, iOS">
-    <meta name="author" content="maksimyugov89">
-    <link rel="manifest" href="manifest.json">
-    <title>FuelMaster - Калькулятор расхода топлива</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#007bff">
+  <title>FuelMaster</title>
+
+  <!-- PWA -->
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="assets/img/logo.png" type="image/png">
+
+  <!-- iOS Support -->
+  <link rel="apple-touch-icon" href="assets/img/icon-192.png">
+  <link rel="apple-touch-startup-image" href="assets/img/splash-640x1136.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="header-content">
-                <h1 class="brand-title">FuelMaster</h1>
-                <div class="header-utils">
-                    <div class="weather-info">
-                        <i class="fas fa-cloud"></i> 11°C, Курск <i class="fas fa-arrow-down"></i> 760 мм
-                    </div>
-                    <select id="language-toggle" onchange="changeLanguage()">
-                        <option value="ru">RU</option>
-                        <option value="en">EN</option>
-                    </select>
-                    <button id="theme-toggle" aria-label="Переключить тему">
-                        <span id="theme-text">Светлая</span>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </header>
+  <header>
+    <h1>FuelMaster</h1>
+    <p>Умный калькулятор для учёта топлива и расходов</p>
+  </header>
 
-    <section id="hero">
-        <div class="parallax-bg"></div>
-        <div class="particles"></div>
-        <div class="container">
-            <h1 id="hero-title">Управляй расходом топлива с умом</h1>
-            <p id="hero-subtitle">FuelMaster — комплексное приложение для отслеживания автомобилей, расчета топлива и полезных советов.</p>
-            <a href="#download" class="btn primary"><i class="fas fa-download animated-icon"></i> <span id="download-text">Скачать</span></a>
-            <div class="seasonal-banner" id="seasonal-banner">Осенние обновления 2025: Улучшенный расчет и новые советы по экономии до 30 сентября! <span id="countdown"></span></div>
-        </div>
+  <main>
+    <section class="hero">
+      <img src="assets/img/logo.png" alt="FuelMaster Logo" class="logo">
+      <button id="installBtn" hidden>📲 Установить FuelMaster</button>
     </section>
+  </main>
 
-    <section id="calculator">
-        <div class="container">
-            <h2 id="calculator-title">Рассчитайте расход топлива</h2>
-            <div class="calculator-form">
-                <input type="number" id="start-mileage" placeholder="Начальный пробег (км)" min="0" oninput="updateTotalMileage()">
-                <input type="number" id="end-mileage" placeholder="Конечный пробег (км)" min="0" oninput="updateTotalMileage()">
-                <input type="number" id="start-fuel" placeholder="Топливо в баке на начало (л)" min="0">
-                <input type="number" id="highway-km" placeholder="Км по трассе" min="0">
-                <button onclick="calculateFuel()">Рассчитать</button>
-                <p id="total-mileage"></p>
-                <p id="result"></p>
-            </div>
-        </div>
-    </section>
+  <footer>
+    <p>© 2025 FuelMaster</p>
+  </footer>
 
-    <section id="features">
-        <div class="container">
-            <h2 id="features-title">Основные возможности</h2>
-            <div class="feature-grid">
-                <div class="feature-card">
-                    <i class="fas fa-car animated-icon"></i>
-                    <h3 id="feature1-title">Управление авто</h3>
-                    <p id="feature1-desc">Добавление, редактирование, удаление автомобилей с базой моделей из CSV.</p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-gas-pump animated-icon"></i>
-                    <h3 id="feature2-title">Расчет расхода</h3>
-                    <p id="feature2-desc">Учет города/трассы, погоды, кондиционера и других факторов.</p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-chart-line animated-icon"></i>
-                    <h3 id="feature3-title">История и графики</h3>
-                    <p id="feature3-desc">Хранение, фильтры и визуализация с fl_chart.</p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-lock animated-icon"></i>
-                    <h3 id="feature4-title">Безопасность и премиум</h3>
-                    <p id="feature4-desc">Firebase вход, синхронизация с Firestore для премиум.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="screenshots">
-        <div class="container">
-            <h2 id="screenshots-title">Скриншоты</h2>
-            <div class="gallery" id="screenshot-gallery">
-                <img src="Screenshot-1-dark.jpg" alt="Скриншот 1" loading="lazy" data-light="Screenshot-1-light.jpg" ondblclick="openModal(this)">
-                <img src="Screenshot-2-dark.jpg" alt="Скриншот 2" loading="lazy" data-light="Screenshot-2-light.jpg" ondblclick="openModal(this)">
-                <img src="Screenshot-3-dark.jpg" alt="Скриншот 3" loading="lazy" data-light="Screenshot-3-light.jpg" ondblclick="openModal(this)">
-                <img src="Screenshot-4-dark.jpg" alt="Скриншот 4" loading="lazy" data-light="Screenshot-4-light.jpg" ondblclick="openModal(this)">
-                <img src="Screenshot-5-dark.jpg" alt="Скриншот 5" loading="lazy" data-light="Screenshot-5-light.jpg" ondblclick="openModal(this)">
-                <img src="Screenshot-6-dark.jpg" alt="Скриншот 6" loading="lazy" data-light="Screenshot-6-light.jpg" ondblclick="openModal(this)">
-                <img src="Screenshot-7-dark.jpg" alt="Скриншот 7" loading="lazy" data-light="Screenshot-7-light.jpg" ondblclick="openModal(this)">
-                <img src="Screenshot-8-dark.jpg" alt="Скриншот 8" loading="lazy" data-light="Screenshot-8-light.jpg" ondblclick="openModal(this)">
-                <img src="Screenshot-9-dark.jpg" alt="Скриншот 9" loading="lazy" data-light="Screenshot-9-light.jpg" ondblclick="openModal(this)">
-                <img src="Screenshot-10-dark.jpg" alt="Скриншот 10" loading="lazy" ondblclick="openModal(this)">
-                <img src="Screenshot-11-dark.jpg" alt="Скриншот 11" loading="lazy" ondblclick="openModal(this)">
-                <img src="Screenshot-12-dark.jpg" alt="Скриншот 12" loading="lazy" ondblclick="openModal(this)">
-            </div>
-        </div>
-    </section>
-
-    <section id="testimonials">
-        <div class="container">
-            <h2 id="testimonials-title">Отзывы пользователей</h2>
-            <div class="testimonial-grid">
-                <div class="testimonial-card">
-                    <p id="testimonial1-text">"Отлично помогает экономить топливо!"</p>
-                    <span id="testimonial1-author">— Иван, Москва</span>
-                    <div class="stars">★★★★★</div>
-                </div>
-                <div class="testimonial-card">
-                    <p id="testimonial2-text">"Простое и удобное приложение!"</p>
-                    <span id="testimonial2-author">— Ольга, Санкт-Петербург</span>
-                    <div class="stars">★★★★☆</div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="download">
-        <div class="container">
-            <h2 id="download-title">Скачай FuelMaster</h2>
-            <p id="download-desc">Доступно для Android и iOS. Установи прямо сейчас!</p>
-            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary"><img src="https://github.com/user-attachments/assets/1bceca05-16a6-421e-b3ea-2349624b89a9" alt="Logo" class="download-logo"> Исходный код</a>
-            <a href="#" class="btn primary"><img src="https://github.com/user-attachments/assets/1bceca05-16a6-421e-b3ea-2349624b89a9" alt="Logo" class="download-logo"> Скачать APK</a>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 FuelMaster | <a href="https://github.com/maksimyugov89" target="_blank"><i class="fab fa-github"></i> maksimyugov89</a></p>
-            <a href="https://twitter.com/yourhandle" target="_blank"><i class="fab fa-twitter"></i></a>
-        </div>
-    </footer>
-
-    <div id="modal" class="modal">
-        <span class="close-modal" onclick="closeModal()">&times;</span>
-        <img id="modal-img" src="" alt="Увеличенное изображение">
-        <p id="modal-caption"></p>
-    </div>
-
-    <script src="script.js"></script>
+  <!-- JS -->
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
