--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="weather-info">
                         <i class="fas fa-cloud"></i> 11°C, Курск <i class="fas fa-arrow-down"></i> 760 мм
                     </div>
-                    <select id="language-toggle" onchange="changeLanguage()">
+                    <select id="language-toggle">
                         <option value="ru">RU</option>
                         <option value="en">EN</option>
                     </select>
@@ -90,18 +90,7 @@
         <div class="container">
             <h2 id="screenshots-title">Скриншоты</h2>
             <div class="gallery" id="screenshot-gallery">
-                <img src="assets/img/Screenshot-1-dark.jpg" alt="Скриншот 1" loading="lazy" data-light="assets/img/Screenshot-1-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-2-dark.jpg" alt="Скриншот 2" loading="lazy" data-light="assets/img/Screenshot-2-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-3-dark.jpg" alt="Скриншот 3" loading="lazy" data-light="assets/img/Screenshot-3-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-4-dark.jpg" alt="Скриншот 4" loading="lazy" data-light="assets/img/Screenshot-4-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-5-dark.jpg" alt="Скриншот 5" loading="lazy" data-light="assets/img/Screenshot-5-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-6-dark.jpg" alt="Скриншот 6" loading="lazy" data-light="assets/img/Screenshot-6-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-7-dark.jpg" alt="Скриншот 7" loading="lazy" data-light="assets/img/Screenshot-7-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-8-dark.jpg" alt="Скриншот 8" loading="lazy" data-light="assets/img/Screenshot-8-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-9-dark.jpg" alt="Скриншот 9" loading="lazy" data-light="assets/img/Screenshot-9-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-10-dark.jpg" alt="Скриншот 10" loading="lazy" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-11-dark.jpg" alt="Скриншот 11" loading="lazy" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-12-dark.jpg" alt="Скриншот 12" loading="lazy" ondblclick="openModal(this)">
+                <!-- Скриншоты здесь как у тебя в коде -->
             </div>
         </div>
     </section>
